# dstree

./: .gitignore  CMakeLists.txt  READ.ME  README.md  globals.h  run_search_experiments.sh
Logs/: gt
include/: #dstree_query_engine.h#  dstree_file_buffer.h  dstree_file_buffer_manager.h  dstree_index.h  dstree_node.h  dstree_node_split.h  dstree_query_engine.h
src/: #dstree.c#  dstree.c  dstree_file_buffer.c  dstree_file_buffer_manager.c  dstree_file_loaders.c  dstree_index.c  dstree_node.c  dstree_node_split.c  dstree_query_engine.c  globals.c
